add firebase
